--- a/Modules/Teacher/CourseProfile/CourseProfileAssets/courseInject.css
+++ b/Modules/Teacher/CourseProfile/CourseProfileAssets/courseInject.css
@@ -15,7 +15,8 @@
 }
 
 .assessment-wrap{
-    @apply flex flex-row max-w-full items-center mt-2 mx-2;
+    @apply flex flex-row max-w-full items-center  mx-2;
+/*    mt-2*/
 }
 
 .assessment-wrap > h3{
@@ -24,6 +25,10 @@
 
 .vertical-line{
     @apply border-solid border-gray-400 border-l-2 mx-5 h-2/4;
+}
+
+.flex-center{
+    @apply flex justify-center;
 }
 
 @tailwind utilities;
