--- a/Modules/Teacher/CourseProfile/CourseProfileAssets/courseProfileStyle.css
+++ b/Modules/Teacher/CourseProfile/CourseProfileAssets/courseProfileStyle.css
@@ -23,6 +23,10 @@
     background-color: #F9F8FE;
 }
 
+.textarea-h{
+    height: 5em;
+}
+
 .middleSectionLayout{
     background-color: #F4FAFF;
     display: inline-flex;
@@ -36,133 +40,4 @@
 
 .left-container > div {
     margin: 0.5em 0;
-}
-
-
-#checkout-progress {
-    width: 90%;
-    margin: 0px auto;
-    font-size: 2.5em;
-    font-weight: 900;
-    position: relative;
-}
-@media (max-width: 767px) {
-    #checkout-progress {
-        font-size: 1.5em;
-    }
-}
-#checkout-progress:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 50%;
-    height: 20px;
-    width: 100%;
-    background-color: #ccc;
-    transform: translateY(-50%) perspective(1000px);
-}
-#checkout-progress:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 50%;
-    height: 20px;
-    width: 100%;
-    background-color: #2C3E50;
-    transform: scaleX(0) translateY(-50%) perspective(1000px);
-    transform-origin: left center;
-    transition: transform 0.5s ease;
-}
-#checkout-progress.step-2:after {
-    transform: scaleX(0.333) translateY(-50%) perspective(1000px);
-}
-#checkout-progress.step-3:after {
-    transform: scaleX(0.666) translateY(-50%) perspective(1000px);
-}
-#checkout-progress.step-4:after {
-    transform: scaleX(1) translateY(-50%) perspective(1000px);
-}
-#checkout-progress.step-5:after {
-    transform: scaleX(1) translateY(-50%) perspective(1000px);
-}
-#checkout-progress .progress-bar {
-    width: 100%;
-    display: flex;
-    height: 100px;
-    justify-content: space-between;
-    align-items: center;
-}
-#checkout-progress .progress-bar .step {
-    z-index: 2;
-    position: relative;
-}
-#checkout-progress .progress-bar .step .step-label {
-    position: absolute;
-    top: calc(100% + 25px);
-    left: 50%;
-    transform: translateX(-50%) perspective(1000px);
-    white-space: nowrap;
-    font-size: 0.4em;
-    font-weight: 600;
-    color: #ccc;
-    transition: 0.3s ease;
-}
-@media (max-width: 767px) {
-    #checkout-progress .progress-bar .step .step-label {
-        top: calc(100% + 15px);
-    }
-}
-#checkout-progress .progress-bar .step span {
-    color: #ccc;
-    transition: 0.3s ease;
-    display: block;
-    transform: translate3d(0, 0, 0) scale(1) perspective(1000px);
-}
-#checkout-progress .progress-bar .step .fa-check {
-    color: #fff;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transition: transform 0.3s ease;
-    transform: translate3d(-50%, -50%, 0) scale(0) perspective(1000px);
-}
-#checkout-progress .progress-bar .step.active span, #checkout-progress .progress-bar .step.active .step-label {
-    color: #2C3E50;
-}
-#checkout-progress .progress-bar .step.valid .fa-check {
-    transform: translate3d(-50%, -50%, 0) scale(1) perspective(1000px);
-}
-#checkout-progress .progress-bar .step.valid span {
-    color: #2C3E50;
-    transform: translate3d(0, 0, 0) scale(2) perspective(1000px);
-}
-#checkout-progress .progress-bar .step.valid .step-label {
-    color: #2C3E50 !important;
-}
-#checkout-progress .progress-bar .step:after {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%) perspective(1000px);
-    width: 75px;
-    height: 75px;
-    background-color: #fff;
-    border-radius: 50%;
-    border: 5px solid #ccc;
-    transition: 0.3s ease;
-}
-@media (max-width: 767px) {
-    #checkout-progress .progress-bar .step:after {
-        width: 40px;
-        height: 40px;
-    }
-}
-#checkout-progress .progress-bar .step.active:after {
-    border: 5px solid #2C3E50;
-}
-#checkout-progress .progress-bar .step.valid:after {
-    background-color: #2C3E50;
-    border: 5px solid #2C3E50;
 }
