--- a/Modules/Teacher/CourseProfile/CourseProfileAssets/courseInject.css
+++ b/Modules/Teacher/CourseProfile/CourseProfileAssets/courseInject.css
@@ -1,29 +1,33 @@
 @tailwind base;
 @tailwind components;
 
+@font-face {
+    font-family: 'Poppins-Regular';
+    src: local('Poppins-Regular'), url(../../../../Assets/Fonts/Poppins/Poppins-Regular.ttf) format('ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-Bold';
+    src: local('Poppins-Bold'), url(../../../../Assets/Fonts/Poppins/Poppins-Bold.ttf) format('ttf');
+}
+
 .main-content-alignment {
-    @apply container mx-auto py-3 sm:px-3 lg:px-5  max-w-7xl sm:max-w-xl md:max-w-3xl lg:max-w-7xl;
+    @apply container mx-auto py-3 sm:px-3 lg:px-5  max-w-7xl
+    sm:max-w-xl md:max-w-3xl lg:max-w-7xl;
+}
+
+
+.cprofile-grid{
+    @apply max-w-full grid gap-3.5 px-4 py-6 sm:px-0;
 }
 
 .cprofile-content-head {
     @apply row-span-2 space-y-2;
 }
 
-.cprofile-primary-border, .course-assessment-border, .clo-table-border {
+.cprofile-primary-border, .course-assessment-border, .clo-table-border , .weeklytopics-primary-border {
     @apply border-solid border-2;
     /*        @apply border-solid border-gray-300 border-t-2 border-r-2 border-l-2 border-b-2 ;*/
-}
-
-.cprofile-content-box-border {
-    @apply bg-white rounded-t-md border-solid border-t-2 px-5 pt-4 pb-4;
-}
-
-.cprofile-creation-content {
-    @apply text-xl text-center my-2 font-bold;
-}
-
-.cprofile-left-container, .cprofile-right-container {
-    @apply flex flex-col flex-shrink-0 max-w-full;
 }
 
 .course-assessment-border, .clo-table-border {
@@ -31,16 +35,30 @@
     @apply rounded-t-lg;
 }
 
+.cprofile-content-box-border {
+    @apply bg-white rounded-t-md border-solid border-t-2 px-5 pt-4 pb-4;
+}
+
+.cprofile-container-centertxt , .weekly-topic-container-centertxt {
+    @apply text-xl text-center my-2 font-bold;
+}
+
+.cprofile-left-container, .cprofile-right-container {
+    @apply flex flex-col flex-shrink-0 max-w-full;
+}
+
+.cprofile-left-container > div{
+    @apply my-2;
+}
 
 .table-head {
     @apply text-center my-2 font-bold text-white;
 }
 
 
-.assessment-wrap , .cprofile-content-division {
+.assessment-wrap , .cprofile-content-division  , .row-flex{
     @apply flex flex-row max-w-full items-center
     mx-2;
-    /*    mt-2*/
 }
 
 .assessment-wrap > h3 {
@@ -61,18 +79,25 @@
 }
 
 .progress-circle-filled {
-    @apply bg-palette_ms_bg-200 text-palette_ms_bg-800 ;
+    @apply bg-catalystBlue-dl3 text-catalystLight-b1 ;
 }
 
 .progress-circle-unfilled {
-    @apply bg-palette_ms_bg-800 text-palette_ms_bg-200 ;
+    @apply bg-catalystBlue-dl3 text-catalystLight-b1 ;
 }
 
 .circular-span {
     @apply text-white text-center w-full;
 }
 
+.learning-outcome-head{
+    @apply text-center font-medium uppercase text-black bg-gray-200 h-10 ;
+}
 
+.learning-outcome-row{
+    @apply capitalize text-sm text-center text-black bg-white font-medium h-10;
+
+}
 
 .cprofile-column {
     @apply border border-t-0 border-gray-300 self-center flex-grow overflow-hidden list-none h-10;
@@ -80,6 +105,10 @@
 
 .cprofile-cell-data {
     @apply flex justify-center items-center min-h-full min-w-full;
+}
+
+.cell-input{
+    @apply text-center min-h-full outline-none;
 }
 
 @tailwind utilities;
