--- a/Modules/Teacher/CourseProfile/CourseProfileAssets/courseProfileStyle.css
+++ b/Modules/Teacher/CourseProfile/CourseProfileAssets/courseProfileStyle.css
@@ -9,7 +9,7 @@
     --background-catalyst-instruments-weights: #0284FC;
 }
 
-@font-face {
+/*@font-face {
     font-family: Poppins-Regular;
     src: url(../../../../Assets/Fonts/Poppins/Poppins-Regular.ttf);
 }
@@ -17,7 +17,7 @@
 @font-face {
     font-family: Poppins-Bold;
     src: url(../../../../Assets/Fonts/Poppins/Poppins-Bold.ttf);
-}
+}*/
 
 .home-main {
     background-color: #F9F8FE;
@@ -39,7 +39,7 @@
 }
 
 .left-container > div {
-    margin: 0.5em 0;
+    margin: 0.7em 0;
 }
 
 .loginButton {
