--- a/Modules/Teacher/CourseProfile/CourseProfileAssets/courseProfileStyle.css
+++ b/Modules/Teacher/CourseProfile/CourseProfileAssets/courseProfileStyle.css
@@ -98,6 +98,14 @@
     transform: translate3d(0, 0, 0);
 }
 
+.blur-filter {
+    -webkit-filter: blur(2px);
+    -moz-filter: blur(2px);
+    -o-filter: blur(2px);
+    -ms-filter: blur(2px);
+    filter: blur(2px);
+}
+
 /*.clo-toggle:checked + .inside-label span {
     background: var(--background-catalyst-instruments-weights);
     animation: myAnimation 0.4s ease;
