course profile management updation.

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -582,6 +582,13 @@
 
 </style>
 <body>
+<header>
+    <textarea type="text" class=""
+              value="" placeholder="Write weekly description here..." id="detail-1">By default,
+        Tailwind includes grid-template-column utilities for creating basic grids with up to 12 equal
+        width columns. You change, add,  or remove these by customizing the gridTemplateColumns section
+        of your Tailwind theme config</textarea>
+</header>
 
 <div class="container">
     <div class="cube">
