Module creation of teacher and student.
1. Modification in course profile
2. Modification in Weekly covered topic.
3. Backend Implementation for Dashboard and Student Progress on teacher-side.
4. Design modification of dashboard and student progress.
5. Student-side Dashboard working (initial) .
6. Student Profile setting (design).

--- a/Assets/Stylesheets/Master.css
+++ b/Assets/Stylesheets/Master.css
@@ -354,6 +354,8 @@ body::-webkit-scrollbar-corner {
         top: 25%;
     }
 }
+/** Shapes Section */
+
 
 
 /** Laptops, Desktops Screen B/w 1025px to 1280px to higher resolution */
